--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-orm', version: '5.0.2.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.0.1.Final'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.0.1.Final'
-    runtime group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+  //  runtime group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+
+    compile group: 'com.h2database', name: 'h2', version: '1.4.195'
 
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
     testCompile group: 'junit', name: 'junit', version: '4.12'
