--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/enote?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.driverClassName=org.h2.Driver
+jdbc.url=jdbc:h2:file:~/h2/production;DB_CLOSE_ON_EXIT=FALSE
 jdbc.username=root
 jdbc.password=root
